--- a/Antra/AntraProgramavimoPraktika.csproj
+++ b/Antra/AntraProgramavimoPraktika.csproj
@@ -74,6 +74,12 @@
     <Compile Include="Prisijungimas.Designer.cs">
       <DependentUpon>Prisijungimas.cs</DependentUpon>
     </Compile>
+    <Compile Include="Prisijungta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Prisijungta.Designer.cs">
+      <DependentUpon>Prisijungta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registracija.cs">
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Prisijungimas.resx">
       <DependentUpon>Prisijungimas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Prisijungta.resx">
+      <DependentUpon>Prisijungta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
